--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ conf/**/*credentials*
 # ignore everything in the following folders
 data/**
 logs/**
+anonymized/**
 
 # except their sub-folders
 !data/**/
